[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prospecting-agent"
version = "0.1.0"
description = "Autonomous lead prospecting with intent signals, enrichment, and outreach generation."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "erron.ai"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/erron-ai/prospecting-agent"
Issues = "https://github.com/erron-ai/prospecting-agent/issues"

[project.scripts]
prospecting-agent = "prospecting_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
